--- a/analysis/single_neuron_sandbox.ipynb
+++ b/analysis/single_neuron_sandbox.ipynb
@@ -679,27 +679,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Source           SS     DF        MS         F     p-unc       np2\n",
-      "0        state     2.377397    2.0  1.188699  0.425389  0.653634  0.000856\n",
-      "1          val    15.857781    3.0  5.285927  1.891630  0.129287  0.005682\n",
-      "2  state * val    12.545198    6.0  2.090866  0.748241  0.610895  0.004501\n",
-      "3     Residual  2774.816308  993.0  2.794377       NaN       NaN       NaN\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(anova_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -716,6 +695,8 @@
    ],
    "source": [
     "# summarize RT behavior for each subject\n",
+    "\n",
+    "#TODO modify normalization for histograms - normalize as proportion across all trials rather than within condition\n",
     "\n",
     "don_s12_rt = all_bhv['rt'].loc[(all_bhv['fname'].str.contains('D')) & (all_bhv['state'] < 3) & (all_bhv['forced']== 0)]\n",
     "don_s3_rt = all_bhv['rt'].loc[(all_bhv['fname'].str.contains('D')) & (all_bhv['state'] == 3) & (all_bhv['forced']== 0)]\n",
@@ -1168,6 +1149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Work in Progress] - Bootstrapping analysis for assessing state-dependency of value coding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1244,65 +1232,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Determine significant neurons\n",
-    "sig_units = p_vals[ofc_ix, :] < .01\n",
-    "\n",
-    "# Extract beta weights for the three states\n",
-    "betas1 = betas[ofc_ix, 0]\n",
-    "betas2 = betas[ofc_ix, 1]\n",
-    "betas3 = betas[ofc_ix, 2]\n",
-    "\n",
-    "# Determine significance for each state\n",
-    "sig1 = sig_units[:, 0]\n",
-    "sig2 = sig_units[:, 1]\n",
-    "sig3 = sig_units[:, 2]\n",
-    "axis_range = [-.5, .5]\n",
-    "\n",
-    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(10, 3))\n",
-    "\n",
-    "ax1.plot([0, 0], [-.3, .3], color='k', zorder=1)\n",
-    "ax1.plot([-.3, .3], [0, 0], color='k', zorder=1)\n",
-    "ax1.scatter(betas1[~sig1 & ~sig2], betas2[~sig1 & ~sig2], color='tab:gray', zorder=2, alpha=.4)\n",
-    "ax1.scatter(betas1[sig1 & sig2], betas2[sig1 & sig2], color='tab:purple', zorder=2, alpha=.7)\n",
-    "ax1.scatter(betas1[sig1 & ~sig2], betas2[sig1 & ~sig2], color='tab:red', zorder=2, alpha=.7)\n",
-    "ax1.scatter(betas1[~sig1 & sig2], betas2[~sig1 & sig2], color='tab:blue', zorder=2, alpha=.7)\n",
-    "ax1.set_xlim((-.3, .3))\n",
-    "ax1.set_ylim((-.3, .3))\n",
-    "\n",
-    "\n",
-    "ax2.plot([0, 0], [-.3, .3], color='k', zorder=1)\n",
-    "ax2.plot([-.3, .3], [0, 0], color='k', zorder=1)\n",
-    "ax2.scatter(betas1[~sig1 & ~sig3], betas3[~sig1 & ~sig3], color='tab:gray', zorder=2, alpha=.4)\n",
-    "ax2.scatter(betas1[sig1 & sig3], betas3[sig1 & sig3], color='tab:orange', zorder=2, alpha=.7)\n",
-    "ax2.scatter(betas1[sig1 & ~sig3], betas3[sig1 & ~sig3], color='tab:red', zorder=2, alpha=.7)\n",
-    "ax2.scatter(betas1[~sig1 & sig3], betas3[~sig1 & sig3], color='tab:green', zorder=2, alpha=.7)\n",
-    "ax2.set_xlim((-.3, .3))\n",
-    "ax2.set_ylim((-.3, .3))\n",
-    "\n",
-    "\n",
-    "ax3.plot([0, 0], [-.3, .3], color='k', zorder=1)\n",
-    "ax3.plot([-.3, .3], [0, 0], color='k', zorder=1)\n",
-    "ax3.scatter(betas2[~sig2 & ~sig3], betas3[~sig2 & ~sig3], color='tab:gray', zorder=2, alpha=.4)\n",
-    "ax3.scatter(betas2[sig2 & sig3], betas3[sig2 & sig3], color='tab:cyan', zorder=2, alpha=.7)\n",
-    "ax3.scatter(betas2[sig2 & ~sig3], betas3[sig2 & ~sig3], color='tab:blue', zorder=2, alpha=.7)\n",
-    "ax3.scatter(betas2[~sig2 & sig3], betas3[~sig2 & sig3], color='tab:green', zorder=2, alpha=.7)\n",
-    "ax3.set_xlim((-.3, .3))\n",
-    "ax3.set_ylim((-.3, .3))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### [Work in Progress] - Saccade-aligned neural data\n",
     "The goal is to look at the value code during saccades \n",
     "- is the value associated with the first saccade of a single-saccade trial congruent with the state?\n",
     "- is the value associated with the first saccade of a two-saccade trial incongruent with the state?"
@@ -1425,18 +1358,6 @@
     "                \n",
     "\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xt = np.arange(0, np.mean(np.diff(ts))*n_samples_total, np.mean(np.diff(ts))) - (np.mean(np.diff(ts))*n_samples_total)/2\n",
-    "\n",
-    "plt.plot(xt, np.mean((sacc1_fix_pval_current[ofc_ix,:] < .01), axis=0))\n",
-    "plt.plot(xt, np.mean((sacc1_fix_pval_alt[ofc_ix,:] < .01), axis=0))"
    ]
   }
  ],
