--- a/analysis/single_trial_decoding_sandbox.ipynb
+++ b/analysis/single_trial_decoding_sandbox.ipynb
@@ -274,28 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:11: RuntimeWarning: Mean of empty slice\n",
-      "  ofc_val_state_pp[:,:, 0] = np.nanmean(OFC_pp[:,:, 0:4], axis=2)\n",
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:12: RuntimeWarning: Mean of empty slice\n",
-      "  ofc_val_state_pp[:,:, 1] = np.nanmean(OFC_pp[:,:, 4:8], axis=2)\n",
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:13: RuntimeWarning: Mean of empty slice\n",
-      "  ofc_val_state_pp[:,:, 2] = np.nanmean(OFC_pp[:,:, 8:12], axis=2)\n",
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:16: RuntimeWarning: Mean of empty slice\n",
-      "  cdn_val_state_pp[:,:, 0] = np.nanmean(CdN_pp[:,:, 0:4], axis=2)\n",
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:17: RuntimeWarning: Mean of empty slice\n",
-      "  cdn_val_state_pp[:,:, 1] = np.nanmean(CdN_pp[:,:, 4:8], axis=2)\n",
-      "C:\\Users\\thome\\AppData\\Local\\Temp\\ipykernel_13968\\3965626627.py:18: RuntimeWarning: Mean of empty slice\n",
-      "  cdn_val_state_pp[:,:, 2] = np.nanmean(CdN_pp[:,:, 8:12], axis=2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find the predicted label for each moment in each trial\n",
     "ofc_predicted_valstate = np.argmax(OFC_pp, axis = 2)\n",
@@ -525,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +525,7 @@
     "\n",
     "d_ofc_n_single_take = np.sum(ofc_n_states_per_trial[AB_single_take_ix & d_ix, :], axis=1)\n",
     "d_ofc_n_double_take = np.sum(ofc_n_states_per_trial[AB_double_take_ix & d_ix, :], axis=1)\n",
-    "d_ofc_n_states_ttest = pg.ttest(k_ofc_n_single_take, k_ofc_n_double_take, correction=False)\n",
+    "d_ofc_n_states_ttest = pg.ttest(d_ofc_n_single_take, d_ofc_n_double_take, correction=False)\n",
     "\n",
     "d_cdn_n_single_take = np.sum(cdn_n_states_per_trial[AB_single_take_ix & d_ix, :], axis=1)\n",
     "d_cdn_n_double_take = np.sum(cdn_n_states_per_trial[AB_double_take_ix & d_ix, :], axis=1)\n",
@@ -625,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +664,7 @@
        "T-test  8.352e+49    1.0  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +733,7 @@
        "T-test  0.675561  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -800,28 +781,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>T-test</th>\n",
-       "      <td>-15.746952</td>\n",
-       "      <td>2681</td>\n",
+       "      <td>-5.164776</td>\n",
+       "      <td>2284</td>\n",
        "      <td>two-sided</td>\n",
-       "      <td>1.672636e-53</td>\n",
-       "      <td>[-0.66, -0.51]</td>\n",
-       "      <td>0.755107</td>\n",
-       "      <td>8.352e+49</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.615607e-07</td>\n",
+       "      <td>[-0.27, -0.12]</td>\n",
+       "      <td>0.254477</td>\n",
+       "      <td>2.835e+04</td>\n",
+       "      <td>0.999319</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                T   dof alternative         p-val           CI95%   cohen-d  \\\n",
-       "T-test -15.746952  2681   two-sided  1.672636e-53  [-0.66, -0.51]  0.755107   \n",
+       "               T   dof alternative         p-val           CI95%   cohen-d  \\\n",
+       "T-test -5.164776  2284   two-sided  2.615607e-07  [-0.27, -0.12]  0.254477   \n",
        "\n",
-       "             BF10  power  \n",
-       "T-test  8.352e+49    1.0  "
+       "             BF10     power  \n",
+       "T-test  2.835e+04  0.999319  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +871,7 @@
        "T-test  0.953404  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
