--- a/analysis/single_trial_decoding_sandbox.ipynb
+++ b/analysis/single_trial_decoding_sandbox.ipynb
@@ -1485,10 +1485,10 @@
     "ax[0,2].set_ylabel('Poster Prob.')\n",
     "ax[0,2].set_title('OFC')\n",
     "\n",
-    "ax[0,3].plot(ts, moving_average(CdN_unch[dt1_trial, :], s)/2, c='tab:blue', label = 'True State, Unchosen')\n",
-    "ax[0,3].plot(ts, moving_average(CdN_alt_ch[dt1_trial, :], s)/2, c='tab:gray', label = 'Alt State, Chosen')\n",
-    "ax[0,3].plot(ts, moving_average(CdN_alt_unch[dt1_trial, :], s)/2, c='black', label = 'Alt State, Unchosen')\n",
-    "ax[0,3].plot(ts, moving_average(CdN_ch[dt1_trial, :], s)/2, c='tab:red', label = 'True State, Chosen')\n",
+    "ax[0,3].plot(ts, moving_average(CdN_unch[dt1_trial, :], s), c='tab:blue', label = 'True State, Unchosen')\n",
+    "ax[0,3].plot(ts, moving_average(CdN_alt_ch[dt1_trial, :], s), c='tab:gray', label = 'Alt State, Chosen')\n",
+    "ax[0,3].plot(ts, moving_average(CdN_alt_unch[dt1_trial, :], s), c='black', label = 'Alt State, Unchosen')\n",
+    "ax[0,3].plot(ts, moving_average(CdN_ch[dt1_trial, :], s), c='tab:red', label = 'True State, Chosen')\n",
     "ax[0,3].plot(bhv['sacc1_t'].iloc[dt1_trial], 1, marker='v', markersize = mkrsz, c = 'black')\n",
     "ax[0,3].plot(bhv['sacc2_t'].iloc[dt1_trial], 1, marker='v', markersize = mkrsz, c = 'black')\n",
     "ax[0,3].set_xlim((-100, 500))\n",
