added direction encoding

--- a/analysis/single_neuron_processing_one_hot.ipynb
+++ b/analysis/single_neuron_processing_one_hot.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,168 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D20231219_Rec05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 787/787 [06:24<00:00,  2.05it/s]\n",
-      "100%|██████████| 787/787 [05:06<00:00,  2.57it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "D20231221_Rec06\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 606/606 [05:08<00:00,  1.96it/s]\n",
-      "100%|██████████| 606/606 [04:02<00:00,  2.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "D20231224_Rec07\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 503/503 [04:14<00:00,  1.98it/s]\n",
-      "100%|██████████| 503/503 [03:22<00:00,  2.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "D20231227_Rec08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 546/546 [04:35<00:00,  1.98it/s]\n",
-      "100%|██████████| 546/546 [03:26<00:00,  2.64it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "K20240707_Rec06\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 557/557 [04:45<00:00,  1.95it/s]\n",
-      "100%|██████████| 557/557 [03:43<00:00,  2.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "K20240710_Rec07\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 930/930 [09:10<00:00,  1.69it/s]\n",
-      "100%|██████████| 930/930 [06:16<00:00,  2.47it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "K20240712_Rec08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 520/520 [04:24<00:00,  1.96it/s]\n",
-      "100%|██████████| 520/520 [03:27<00:00,  2.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "K20240715_Rec09\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 606/606 [05:01<00:00,  2.01it/s]\n",
-      "100%|██████████| 606/606 [03:51<00:00,  2.61it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving data...\n",
-      "Data saved \n",
-      "\n",
-      "All files processed :]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# loop over each file\n",
     "for f_ix, file_path in enumerate(data_files):\n",
@@ -647,10 +488,11 @@
     "    one_hot_reg_factors['state_a_val'] = one_hot_reg_factors['state_a'].values * bhv['ch_val'].values\n",
     "    one_hot_reg_factors['state_b_val'] = one_hot_reg_factors['state_b'].values * bhv['ch_val'].values\n",
     "    one_hot_reg_factors['state_c_val'] = one_hot_reg_factors['state_c'].values * bhv['ch_val'].values\n",
+    "    one_hot_reg_factors['ch_dir'] = (bhv['side'].values).astype(int)\n",
     "\n",
     "    # Define the factors (excluding intercept)\n",
     "    ix = (bhv['n_sacc'] == 1)\n",
-    "    factors = ['state_a', 'state_b', 'state_c', 'value', 'state_a_val', 'state_b_val', 'state_c_val']\n",
+    "    factors = ['state_a', 'state_b', 'state_c', 'value', 'state_a_val', 'state_b_val', 'state_c_val', 'ch_dir']\n",
     "\n",
     "    n_factors = len(factors)\n",
     "\n",
@@ -674,11 +516,6 @@
     "    anova_df = pd.DataFrame()\n",
     "    anova_df['state'] = bhv['state'].loc[ix]\n",
     "    anova_df['val'] = bhv['ch_val'].loc[ix]\n",
-    "\n",
-    "    t_anova_df = pd.DataFrame()\n",
-    "    t_anova_df['state'] = bhv['state']\n",
-    "    t_anova_df['cue'] = bhv['state_cue']\n",
-    "    t_anova_df['val'] = bhv['ch_val']\n",
     "\n",
     "    # loop over the neurons\n",
     "    for u in tqdm(range(n_units)):\n",
@@ -714,7 +551,7 @@
     "            one_hot_reg_factors['firing_rate'] = firing_rates[:, t, u]\n",
     "            \n",
     "            # Run the regression\n",
-    "            model = smf.ols('firing_rate ~ state_a + state_b + state_c + value + state_a_val + state_b_val + state_c_val', \n",
+    "            model = smf.ols('firing_rate ~ state_a + state_b + state_c + value + state_a_val + state_b_val + state_c_val + ch_dir', \n",
     "                        data=one_hot_reg_factors.loc[ix]).fit()\n",
     "            \n",
     "            # Extract p-values and betas for each factor\n",
@@ -724,51 +561,51 @@
     "                    t_factor_pvals[u, t, i] = model.pvalues[factor]\n",
     "        \n",
     "            \n",
-    "    # let's try to understand the state code better with an AUROC analysis\n",
+    "    # # let's try to understand the state code better with an AUROC analysis\n",
     "\n",
-    "    # initialize arrays to accumulate results into\n",
-    "    auc_scores = np.zeros((n_units, n_times, 4))\n",
-    "    shuffle_auc_scores = np.zeros((n_units, n_times, 4)) \n",
+    "    # # initialize arrays to accumulate results into\n",
+    "    # auc_scores = np.zeros((n_units, n_times, 4))\n",
+    "    # shuffle_auc_scores = np.zeros((n_units, n_times, 4)) \n",
     "\n",
-    "    # let's only look at the single-saccade trials for this\n",
-    "    b_triasl2balance = bhv['n_sacc']==1\n",
+    "    # # let's only look at the single-saccade trials for this\n",
+    "    # b_triasl2balance = bhv['n_sacc']==1\n",
     "\n",
-    "    # pull a balanced set of trials\n",
-    "    trials2use, leftover_ix = pull_balanced_train_set(b_triasl2balance, [bhv['state'].values, bhv['state_cue'].values])\n",
+    "    # # pull a balanced set of trials\n",
+    "    # trials2use, leftover_ix = pull_balanced_train_set(b_triasl2balance, [bhv['state'].values, bhv['state_cue'].values])\n",
     "\n",
-    "    # grab the firing rates and behavioral data associated with these trials\n",
-    "    b_fr = firing_rates[trials2use, :, :]\n",
-    "    b_state_label = bhv['state'].loc[trials2use]\n",
+    "    # # grab the firing rates and behavioral data associated with these trials\n",
+    "    # b_fr = firing_rates[trials2use, :, :]\n",
+    "    # b_state_label = bhv['state'].loc[trials2use]\n",
     "\n",
-    "    # now loop over each neuron\n",
-    "    for u in tqdm(range(n_units)):\n",
+    "    # # now loop over each neuron\n",
+    "    # for u in tqdm(range(n_units)):\n",
     "        \n",
-    "        # loop over times\n",
-    "        for t in range(n_times):\n",
+    "    #     # loop over times\n",
+    "    #     for t in range(n_times):\n",
     "            \n",
-    "            # run one-vs-all AUC classifiers for each state\n",
-    "            auc_scores[u, t, 0] = roc_auc_score(b_state_label == 1, b_fr[:,t,u])\n",
-    "            auc_scores[u, t, 1] = roc_auc_score(b_state_label == 2, b_fr[:,t,u])\n",
-    "            auc_scores[u, t, 2] = roc_auc_score(b_state_label == 3, b_fr[:,t,u])\n",
+    "    #         # run one-vs-all AUC classifiers for each state\n",
+    "    #         auc_scores[u, t, 0] = roc_auc_score(b_state_label == 1, b_fr[:,t,u])\n",
+    "    #         auc_scores[u, t, 1] = roc_auc_score(b_state_label == 2, b_fr[:,t,u])\n",
+    "    #         auc_scores[u, t, 2] = roc_auc_score(b_state_label == 3, b_fr[:,t,u])\n",
     "            \n",
-    "            # also look just at the state 1 and 2 trials\n",
-    "            auc_scores[u, t, 3] = roc_auc_score(b_state_label[b_state_label < 3] == 1, b_fr[b_state_label < 3,t,u])\n",
+    "    #         # also look just at the state 1 and 2 trials\n",
+    "    #         auc_scores[u, t, 3] = roc_auc_score(b_state_label[b_state_label < 3] == 1, b_fr[b_state_label < 3,t,u])\n",
     "            \n",
-    "            # run the shuffles\n",
-    "            # shuffle the labels\n",
-    "            shuff_b_labels = np.random.permutation(b_state_label)\n",
+    "    #         # run the shuffles\n",
+    "    #         # shuffle the labels\n",
+    "    #         shuff_b_labels = np.random.permutation(b_state_label)\n",
     "            \n",
-    "            # run one-vs-all AUC classifiers for each state\n",
-    "            shuffle_auc_scores[u, t, 0] = roc_auc_score(shuff_b_labels == 1, b_fr[:,t,u])\n",
-    "            shuffle_auc_scores[u, t, 1] = roc_auc_score(shuff_b_labels == 2, b_fr[:,t,u])\n",
-    "            shuffle_auc_scores[u, t, 2] = roc_auc_score(shuff_b_labels == 3, b_fr[:,t,u])\n",
+    "    #         # run one-vs-all AUC classifiers for each state\n",
+    "    #         shuffle_auc_scores[u, t, 0] = roc_auc_score(shuff_b_labels == 1, b_fr[:,t,u])\n",
+    "    #         shuffle_auc_scores[u, t, 1] = roc_auc_score(shuff_b_labels == 2, b_fr[:,t,u])\n",
+    "    #         shuffle_auc_scores[u, t, 2] = roc_auc_score(shuff_b_labels == 3, b_fr[:,t,u])\n",
     "            \n",
-    "            # also look just at the state 1 and 2 trials\n",
-    "            shuffle_auc_scores[u, t, 3] = roc_auc_score(shuff_b_labels[shuff_b_labels < 3] == 1, b_fr[shuff_b_labels < 3,t,u])            \n",
+    "    #         # also look just at the state 1 and 2 trials\n",
+    "    #         shuffle_auc_scores[u, t, 3] = roc_auc_score(shuff_b_labels[shuff_b_labels < 3] == 1, b_fr[shuff_b_labels < 3,t,u])            \n",
     "                              \n",
-    "    # rectify the scores\n",
-    "    auc_scores[auc_scores < .5] = 1 - auc_scores[auc_scores < .5]\n",
-    "    shuffle_auc_scores[shuffle_auc_scores < .5] = 1 - shuffle_auc_scores[shuffle_auc_scores < .5]   \n",
+    "    # # rectify the scores\n",
+    "    # auc_scores[auc_scores < .5] = 1 - auc_scores[auc_scores < .5]\n",
+    "    # shuffle_auc_scores[shuffle_auc_scores < .5] = 1 - shuffle_auc_scores[shuffle_auc_scores < .5]   \n",
     "            \n",
     "    # now save the file\n",
     "    print('Saving data...')\n",
@@ -783,8 +620,8 @@
     "        file.create_dataset('t_factor_betas', data=t_factor_betas)   \n",
     "        file.create_dataset('valstate_pvals', data=reg_pvals)  \n",
     "        file.create_dataset('valstate_betas', data=reg_betas)  \n",
-    "        file.create_dataset('state_auc_scores', data=auc_scores)\n",
-    "        file.create_dataset('shuffle_auc_scores', data=shuffle_auc_scores)\n",
+    "        # file.create_dataset('state_auc_scores', data=auc_scores)\n",
+    "        # file.create_dataset('shuffle_auc_scores', data=shuffle_auc_scores)\n",
     "        \n",
     "    print('Data saved \\n')\n",
     "\n",
